# DependaCharta

./: .gitignore  .mise.toml  ANALYSIS_frontend_edge_modeling.md  ANALYSIS_frontend_modeling_issues.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_graph_model.md  DOMAIN.md  INSIGHTS_isPointingUpwards.md  LICENSE.txt  PIPELINE.md  README.MD  README.md  SECURITY.md  delphi-edge-cases.md  index.html  justfile
analysis/: .dockerignore  .editorconfig  DOCKER.md  Dockerfile  README.md  RegenerateGoldenFile.kt  build.gradle.kts  howto-add-new-language.md  long-term-architecture-plan.md  regenerate-golden-file.sh  settings.gradle.kts  (+1 more)
analysis/src/test/resources/analysis/contract/examples/cpp/: CMakeLists.txt
analysis/src/test/resources/analysis/contract/examples/cpp/src/: main.cpp
analysis/src/test/resources/analysis/contract/examples/cpp/src/de/sots/cellarsandcentaurs/adapter/persistence/: CreatureEntity.h  CreatureRepository.h  PersistedCreatures.cpp  PersistedCreatures.h
analysis/src/test/resources/analysis/contract/examples/cpp/src/de/sots/cellarsandcentaurs/application/: CreatureFacade.cpp  CreatureFacade.h  CreatureUtil.h
analysis/src/test/resources/analysis/contract/examples/cpp/src/de/sots/cellarsandcentaurs/domain/model/: ArmorClass.cpp  ArmorClass.h  Creature.cpp  Creature.h  CreatureId.h  CreatureType.h  Fightable.h  HitPoints.h  NoSuchCreatureException.h  Speed.h  SpeedType.h
analysis/src/test/resources/analysis/contract/examples/cpp/src/de/sots/cellarsandcentaurs/domain/service/: CreatureService.cpp  CreatureService.h  Creatures.h
tools/: README.md  (+2 more)
(+716 files in other folders)
